# attention-bilstm-intent-router

./: download_dataset.py  main.py  pyproject.toml
data_info/: cleaned_data_for_training.csv  label_mapping.json
model/: intent_classifier_lstm_model.onnx  intent_classifier_lstm_model.onnx.data  vocab_map.joblib
notebooks/: Analysis.ipynb  Cleaning.ipynb  customer-care-intent-classifier.ipynb  distillbert-fine-tuning.ipynb
test/: compare_models.py  model-comparison.ipynb  test_messages.json
