[project]
name = "attention-bilstm-intent-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "pandas>=3.0.3",
    "pyspellchecker>=0.9.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.13",
    "torch>=2.12.0",
    "transformers>=5.14.1",
]
